# TicTocToe

./: tictoctoe.cpp
tic-tac-toe-sfml-main/: .gitignore  CMakeLists.txt  Makefile  README.md  alpha_beta.cpp  controller.cpp  controller.h  game_state.cpp  game_state.h  main.cpp  render_engine.cpp  render_engine.h  resource_manager.cpp  resource_manager.h
tic-tac-toe-sfml-main/.github/workflows/: cmake.yml
tic-tac-toe-sfml-main/tests/: CMakeLists.txt  game_state_unittest.cpp
